# bap-intern

./: .gitignore  README.md  fastApi.py  handler.py  index_to_name.json  main.py  model.pt  model.pth  model.py  problem1.py  problem1_input3.py  problem2.ipynb  problem2.py  problem2_updated.ipynb  problem3.ipynb  requirements.txt
api-exercise/: README.rst  pyproject.toml
api-exercise/api_exercise/: index.py
api-exercise/api_exercise/config/: __init__.py  db_config.py  icqc_config.py
api-exercise/api_exercise/database/: __init__.py  database.py
api-exercise/api_exercise/icqc/: IDCardQuailityClassification.py  __init__.py
api-exercise/api_exercise/models/: __init__.py  predict_history.py
api-exercise/api_exercise/routes/: __init__.py  predict_routes.py
api-exercise/api_exercise/schemas/: __init__.py
api-exercise/api_exercise/tests/: test_api_exercise.py
data/: Data.csv
global_variable/: global_variable.py
hanlhn/: pyproject.toml
hanlhn/hanlhn/: index2name.pkl  main.py
hanlhn/hanlhn/config/: mongodb.py
hanlhn/hanlhn/models/: flower.py
hanlhn/hanlhn/notebook/: Flowers_Classification_ResNet50.ipynb
hanlhn/hanlhn/predict/: __init__.py  predict.py
hanlhn/hanlhn/routes/: flower.py
hanlhn/hanlhn/schemas/: flower.py
hanlhn/hanlhn/tests/: test_hanlhn.py
hanlhn/schemas/: flower.py
hanlhn/tests/: test_hanlhn.py
init/: updateData.py
model/: buidmodel.py  model_LgRegress.pkl
model-store/: hana_model.mar  model.pt  model.pth
mongodb/: mongoDB.py
switch/: fastapi.py
tests/: test_fastapi.py
updateDataw/: updateData.py
